@@ -233,6 +233,45 @@ it contains the detected race conditions.
 The file tests/outer_inner.supp contains suppressions for 
 the irrelevant or benign errors found in the inner.
 
+An regression test running in the inner (e.g. memcheck/tests/badrw) will
+cause the inner to report an error, which is expected and checked
+as usual when running the regtests in an outer/inner setup.
+However, the outer will often also observe an error, e.g. a jump
+using uninitialised data, or a read/write outside the bounds of a heap
+block. When the outer reports such an error, it will output the
+inner host stacktrace. To this stacktrace, it will append the
+stacktrace of the inner guest program. For example, this is an error
+reported by the outer when the inner runs the badrw regtest:
+  ==8119== Invalid read of size 2
+  ==8119==    at 0x7F2EFD7AF: ???
+  ==8119==    by 0x7F2C82EAF: ???
+  ==8119==    by 0x7F180867F: ???
+  ==8119==    by 0x40051D: main (badrw.c:5)
+  ==8119==    by 0x7F180867F: ???
+  ==8119==    by 0x1BFF: ???
+  ==8119==    by 0x3803B7F0: _______VVVVVVVV_appended_inner_guest_stack_VVVVVVVV_______ (m_execontext.c:332)
+  ==8119==    by 0x40055C: main (badrw.c:22)
+  ==8119==  Address 0x55cd03c is 4 bytes before a block of size 16 alloc'd
+  ==8119==    at 0x2804E26D: vgPlain_arena_malloc (m_mallocfree.c:1914)
+  ==8119==    by 0x2800BAB4: vgMemCheck_new_block (mc_malloc_wrappers.c:368)
+  ==8119==    by 0x2800BC87: vgMemCheck_malloc (mc_malloc_wrappers.c:403)
+  ==8119==    by 0x28097EAE: do_client_request (scheduler.c:1861)
+  ==8119==    by 0x28097EAE: vgPlain_scheduler (scheduler.c:1425)
+  ==8119==    by 0x280A7237: thread_wrapper (syswrap-linux.c:103)
+  ==8119==    by 0x280A7237: run_a_thread_NORETURN (syswrap-linux.c:156)
+  ==8119==    by 0x3803B7F0: _______VVVVVVVV_appended_inner_guest_stack_VVVVVVVV_______ (m_execontext.c:332)
+  ==8119==    by 0x4C294C4: malloc (vg_replace_malloc.c:298)
+  ==8119==    by 0x40051D: main (badrw.c:5)
+In the above, the first stacktrace starts with the inner host stacktrace,
+which in this case is some JITted code. Such code sometimes contains IPs
+that points in the inner guest code (0x40051D: main (badrw.c:5)).
+After the separator, we have the inner guest stacktrace.
+The second stacktrace gives the stacktrace where the heap block that was
+overrun was allocated. We see it was allocated by the inner valgrind
+in the client arena (first part of the stacktrace). The second part is
+the guest stacktrace that did the allocation.
+
+
 (C) Performance tests in an outer/inner setup:
 
  To run all the performance tests with an outer cachegrind, do :
